# btt

./: .gitignore  BUILD_INSTRUCTIONS.md  LICENSE  PROJECT_SUMMARY.md  README.md  bot.py  bot_database.db  bot_persistence.pkl  build.gradle.kts  build.sh  gradle.properties  maintenance_bot.py  maintenance_info.json  maintenance_job.json  manager.py  requirements.txt  settings.gradle.kts  utils.py
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/audioplayerpro/: MainActivity.kt
app/src/main/java/com/audioplayerpro/billing/: BillingManager.kt
app/src/main/java/com/audioplayerpro/data/: AudioDatabase.kt
app/src/main/java/com/audioplayerpro/service/: AudioPlaybackService.kt
app/src/main/java/com/audioplayerpro/ui/components/: CommonComponents.kt  EqualizerSlider.kt  FilePicker.kt  NavigationBar.kt  (+7 more)
app/src/main/java/com/audioplayerpro/viewmodel/: MainViewModel.kt
app/src/main/java/com/example/audioplayer/: AudioResolver.kt  MainActivity.kt  PlaybackService.kt
app/src/main/res/drawable/: ic_previous.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
audio-core/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
audio-core/src/main/cpp/: CMakeLists.txt  audio_engine.cpp  audio_player_jni.cpp  dsp_processor.cpp  equalizer.cpp  native-lib.cpp  visualizer.cpp
audio-core/src/main/cpp/include/: audio_engine.h  dsp_processor.h  equalizer.h  visualizer.h
audio-ml/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
handlers/: profile.py
(+10 files in other folders)
